[package]
name = "illusionna"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = ["tokio", "image", "svg"] }
cli-clipboard = "0.4.0"
either = "1.13.0"
http = "1.1.0"
octocrab = "0.39.0"
secrecy = "0.8.0"
serde_json = "1.0.121"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
webbrowser = "1.0.1"
reqwest = "0.12.5"
serde = { version = "1.0.205", features = ["derive"] }
keyring = { version = "3.2.0", features = ["windows-native", "apple-native", "linux-native"] }
whoami = "1.5.1"

[build-dependencies]
ico = "0.3.0"
winresource = "0.1.17"
